# CherryQuant

./: .coveragerc  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LEARNING_PATH.md  README.md  TEST_REPORT.md  THIRD_PARTY_NOTICES.md  WARP.md  backtest_report.md  demo_database_integration.py  docker-compose.monitoring.yml  pyproject.toml  pytest.ini  run_cherryquant.py  run_cherryquant_ai_selection.py  run_cherryquant_complete.py  run_cherryquant_multi_agent.py  start.sh  test_mongodb_integration.py  test_project_startup.py  test_risk_config.py  test_simple_startup.py
.github/workflows/: ci.yml
adapters/data_adapter/: contract_resolver.py  history_data_manager.py  market_data_manager.py  multi_symbol_manager.py
adapters/data_storage/: database_manager.py
adapters/vnpy_recorder/: realtime_recorder.py
ai/agents/: agent_manager.py  strategy_agent.py
ai/decision_engine/: ai_selection_engine.py  futures_engine.py
ai/llm_client/: openai_client.py
ai/prompts/: ai_selection_prompts.py
config/: alert_config.py  database_config.py  quantbox_config_sync.py  strategies.json
config/settings/: base.py  settings.py
docker/: README.md  docker-compose.test.yml  docker-compose.yml
docker/mongodb/: init_schema.py
docker/overrides/: database_config.docker.py
docker/sql/: init.sql.backup_postgres
docker/test/: Dockerfile
docs/: ARCHITECTURE.md  ARCHITECTURE_REFLECTION_QUANTBOX.md  ARCHITECTURE_REVIEW_REPORT.md  COMPLETION_REPORT.md  DATABASE_MIGRATION_PLAN.md  DELIVERY_CHECKLIST.md  DEPLOYMENT.md  FINAL_ARCHITECTURE_REVIEW.md  FINAL_PROJECT_SUMMARY.md  FINAL_STATUS.md  HONEST_ASSESSMENT_REPORT.md  HONEST_REALITY_CHECK.md  MIGRATION_GUIDE.md  MONGODB_MIGRATION_COMPLETE.md  OPTIMIZATION_PROGRESS_REPORT.md  POST_ARCHITECTURE_REVIEW_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY_STATUS.md  PROJECT_PROGRESS_REPORT.md  QUICK_START.md  README.md  RISK_CONFIG_GUIDE.md  SYMBOL_STANDARDIZATION.md  TODO.md  USER_GUIDE.md  quantbox_integration.md  quantbox_integration_p1.md
docs/adr/: 0000-template.md  0001-use-mongodb.md  0002-dependency-injection.md  0003-prompt-engineering-ai.md  README.md
docs/api/: USAGE.md  ai_decision_api.md
docs/architecture/: ARCHITECTURE_DIAGRAMS.md  CHERRYQUANT_VS_QUANTBOX.md  MONGODB_SCHEMA_V2.md  QUANTBOX_REFACTOR_COMPLETE.md  QUANTBOX_REFACTOR_PHASE1_REPORT.md  QUANTBOX_REFACTOR_PHASE2_REPORT.md
docs/archive/: MIGRATION_GUIDE.md
docs/course/: 00_Prerequisites.md  01_System_Architecture.md  02_Data_Pipeline.md  03_AI_Decision_Engine.md  04_Trading_Execution.md  05_Dependency_Injection.md  06_Testing_Strategies.md  07_Python_Best_Practices.md
docs/design/: architecture.md
docs/guides/: data-download.md  logging.md  warp-features.md
docs/labs/: README.md  lab01_environment_setup.md  lab02_data_flow.md  lab03_prompt_engineering.md  lab04_live_vs_sim_trading.md  lab05_risk_management.md  lab06_testing_tdd.md  lab07_backtesting.md  lab08_capstone_project.md
docs/reference/: architecture-design.md  architecture.md  data-pipeline.md  vnpy-recorder.md
docs/reports/: documentation-reorganization.md  testing-coverage.md  verification.md
examples/: README.md  data_pipeline_complete_demo.py  data_pipeline_demo.py  final_integration_verification.py  test_current_contracts.py  test_quantbox_live_data.py
examples/01_basics/: README.md  hello_cherryquant.py
examples/02_data/: README.md  data_storage.py  fetch_historical_data.py  realtime_data_stream.py
examples/03_ai/: README.md  prompt_engineering.py  simple_ai_decision.py
examples/04_trading/: README.md
examples/archive/: quantbox_integration_demo.py
examples/complete_system/: README.md  backtest_demo.py  end_to_end_demo.py
examples/storage/: 01_bulk_save.py
examples/utils/: 01_contract_parsing.py
monitoring/: prometheus.yml
notebooks/: ai_trading_live_vs_sim.py
scripts/: README.md  init_historical_data.py  migrate_postgres_to_mongodb.py  modernize_type_hints.py  refactor_imports.py  verify_persistence.py
scripts/data/: init_historical_data.py
scripts/runners/: run_cherryquant_complete.py
scripts/sql/: create_agent_tables.sql  create_portfolio_tables.sql
scripts/teaching/: student_setup.sh  verify_environment.py
scripts/utils/: fix_env_config.py
services/: data_ingestor.py
src/alerts/: alert_manager.py
src/cherryquant/: __init__.py  cherry_quant_strategy.py  constants.py  logging_config.py
src/risk/: portfolio_risk_manager.py
src/trading/: order_manager.py  vnpy_gateway.py
tests/: test_ai_engine.py  test_ai_selection_engine_robustness.py  test_execution_windows.py  test_order_manager.py
tests/integration/: test_backtest_integration.py  test_data_pipeline_integration.py  test_p0_p1_tools.py  test_quantbox_integration.py
tests/performance/: benchmark_suite.py
vnpy_ctp-6.7.7.2/: pyproject.toml
web/api/: main.py
(+79 files in other folders)
