[project]
name = "cherryquant"
version = "0.1.0"
description = "AI-driven Chinese futures trading system based on vn.py framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.17.76",
    "openai>=2.6.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "vnpy>=4.1.0",
    "pandas>=2.3.3",
    "numpy>=2.3.4",
    "aiofiles>=25.1.0",
    "asyncpg>=0.30.0",
    "aioredis>=2.0.1",
    "redis>=7.0.1",
    "tushare>=1.2.0",
    "pytz>=2025.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
    "aiohttp>=3.9.0",
]
authors = [
    {name = "CherryQuant Team", email = "team@cherryquant.ai"}
]
keywords = ["trading", "futures", "ai", "quantitative", "vnpy", "china"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
[project.urls]
Homepage = "https://github.com/your-username/CherryQuant"
Repository = "https://github.com/your-username/CherryQuant"
Documentation = "https://github.com/your-username/CherryQuant/docs"

[project.scripts]
cherryquant = "run_cherryquant:main"
cherryquant-ingest = "services.data_ingestor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
