[project]
name = "cherryquant"
version = "0.1.0"
description = "AI-driven Chinese futures trading system based on vn.py framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies
    "openai>=2.6.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "vnpy>=4.1.0",
    "vnpy-ctp",
    "vnpy-ctastrategy>=1.0.0",
    "pandas>=2.3.3",
    "numpy>=2.3.4",
    "aiofiles>=25.1.0",
    # Data sources
    "tushare>=1.2.0",
    "pytz>=2025.2",
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
    "aiohttp>=3.9.0",
    # Database - MongoDB (replaces PostgreSQL + asyncpg)
    "pymongo>=4.0,<5.0",
    "motor>=3.3.0",
    # Cache
    "aioredis>=2.0.1",
    "redis>=7.0.1",
    # Logging
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    # QuantBox for high-performance data management (replaces AKShare)
    "quantbox-cn @ file:///Users/huchen/Projects/quantbox",
    "pydantic-settings>=2.12.0",
    "matplotlib>=3.8.0",
]
authors = [
    {name = "CherryQuant Team", email = "team@cherryquant.ai"}
]
keywords = ["trading", "futures", "ai", "quantitative", "vnpy", "china"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
[project.urls]
Homepage = "https://github.com/your-username/CherryQuant"
Repository = "https://github.com/your-username/CherryQuant"
Documentation = "https://github.com/your-username/CherryQuant/docs"

[project.scripts]
cherryquant = "run_cherryquant:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
"vnpy-ctp" = { path = "third_party/vnpy_ctp-6.7.7.2" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "jupyterlab>=4.0.0",
]

[tool.pytest.ini_options]
# Restrict discovery to project tests
testpaths = ["tests"]

# Standard naming patterns
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Do not recurse into external/vendor or tooling directories
norecursedirs = [
    ".*",
    "build",
    "dist",
    "docs",
    "docker",
    "third_party",
    ".venv",
    "venv",
    "__pycache__",
]

# Asyncio plugin configuration
asyncio_mode = "auto"

# Show summary for skips/xfails/etc., with coverage reporting
addopts = "-ra --cov=src/cherryquant --cov-report=term-missing --cov-report=html --cov-report=xml"

# Tame noisy warnings from dependencies
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
